--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -417,7 +417,7 @@
                     <div class="border-b pb-6">
                         <h3 class="text-lg font-semibold text-gray-900 mb-4">Content Settings</h3>
 
-                        <div>
+                        <div class="mb-6">
                             <label for="maxContentLength" class="block text-sm font-medium text-gray-700 mb-2">
                                 Maximum Content Length (characters)
                                 <span class="text-gray-500 font-normal">• Min: 100 • Max: 50,000</span>
@@ -425,6 +425,21 @@
                             <input type="number" id="maxContentLength" min="100" max="50000"
                                    class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                             <p class="text-sm text-gray-500 mt-1">Maximum number of characters allowed in post content</p>
+                        </div>
+
+                        <div class="flex items-center justify-between">
+                            <div class="flex-1">
+                                <label for="retroactivePostingEnabled" class="text-sm font-medium text-gray-700">
+                                    Retroactive Posting
+                                </label>
+                                <p class="text-sm text-gray-500 mt-1">Allow creating posts with custom timestamps for backdating content. Minimum date: 01/01/2000.</p>
+                            </div>
+                            <div class="ml-4">
+                                <label class="relative inline-flex items-center cursor-pointer">
+                                    <input type="checkbox" id="retroactivePostingEnabled" class="sr-only peer">
+                                    <div class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-blue-600"></div>
+                                </label>
+                            </div>
                         </div>
                     </div>
 
@@ -457,21 +472,6 @@
                             <div class="ml-4">
                                 <label class="relative inline-flex items-center cursor-pointer">
                                     <input type="checkbox" id="fileStatsEnabled" class="sr-only peer">
-                                    <div class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-blue-600"></div>
-                                </label>
-                            </div>
-                        </div>
-
-                        <div class="mt-4 flex items-center justify-between">
-                            <div class="flex-1">
-                                <label for="retroactivePostingEnabled" class="text-sm font-medium text-gray-700">
-                                    Retroactive Posting
-                                </label>
-                                <p class="text-sm text-gray-500 mt-1">Allow creating posts with custom timestamps for backdating content. Minimum date: 01/01/2000.</p>
-                            </div>
-                            <div class="ml-4">
-                                <label class="relative inline-flex items-center cursor-pointer">
-                                    <input type="checkbox" id="retroactivePostingEnabled" class="sr-only peer">
                                     <div class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-blue-600"></div>
                                 </label>
                             </div>
